# rust-myscript

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  azure-pipelines.yml  build-docker-compose.yml  build.dockerfile  build.rs  checkghossversion.toml
.github/: dependabot.yml
.github/workflows/: main.yml
.junie/: guidelines.md
asset/: graphql_release.txt  graphql_tag.txt
crates/amazon-dp/: Cargo.toml
crates/amazon-dp/src/: main.rs
crates/android-tips/: Cargo.toml
crates/android-tips/src/: main.rs
crates/async-vs/: Cargo.toml
crates/async-vs/src/: main.rs
crates/aterm-finder/: Cargo.toml
crates/aterm-finder/src/: main.rs
crates/backuphistory/: Cargo.toml
crates/backuphistory/src/: main.rs
crates/cfr/: Cargo.toml
crates/checkghossversion/: Cargo.toml  build.rs
crates/checkghossversion/src/: main.rs
crates/comparesha1/: Cargo.toml
crates/crate-checker/: Cargo.toml
crates/crate-checker/src/: main.rs
crates/crystal-disk-info-otel/: Cargo.toml
crates/crystal-disk-info-otel/src/: config.rs  main.rs  model.rs  registry.rs
crates/dat-explorer/: Cargo.toml
crates/dat-explorer/src/: dat.rs  feature.rs  lib.rs  main.rs  model.rs
crates/dat-explorer/src/feature/: fetch_dat.rs  read_posts.rs  search_posts.rs
crates/digest-auth/: Cargo.toml
crates/digest-auth/src/: main.rs
crates/filededuplication/: Cargo.toml
crates/filededuplication/src/: feature.rs  lib.rs  main.rs
crates/filededuplication/src/feature/: clone_file.rs  remove_file.rs
crates/filededuplication/src/feature/remove_file/: compute_hash.rs  walk_directory.rs
crates/filededuplication/tests/: remove_file_remove_file_if_master_and_shrink_are_relative.rs  remove_file_remove_file_if_master_is_relative.rs  remove_file_remove_file_if_shrink_is_relative.rs
crates/ghignore/: Cargo.toml
crates/ghignore/src/: main.rs
crates/host-otel/: Cargo.toml
crates/host-otel/src/: main.rs
crates/iijmio-cli/: Cargo.toml
crates/iijmio-cli/src/: main.rs
crates/lfs-agent-local/: Cargo.toml
crates/lfs-agent-local/src/: main.rs
crates/mcp-memo/: Cargo.toml
crates/mcp-memo/src/: main.rs
crates/mcp-pplx/: Cargo.toml
crates/mcp-pplx/src/: main.rs
crates/mimes/: Cargo.toml
crates/mypathhelper/: Cargo.toml
crates/mypathhelper/src/: main.rs
crates/mysqliteversion/: Cargo.toml
crates/mysqliteversion/src/: main.rs
crates/mytimeout/: Cargo.toml
crates/mytimeout/src/: macos.rs  main.rs
crates/mytimeout/tests/: cli.rs
crates/mz-conv/: Cargo.toml
crates/netgear-finder/: Cargo.toml
crates/netgear-finder/src/: main.rs
crates/notify-battery/: Cargo.toml
crates/notify-battery/src/: main.rs
crates/openai-cli/: Cargo.toml
crates/openai-cli/src/: feature.rs  model.rs
crates/openai-cli/src/data/: repository.rs
crates/openai-cli/src/data/repository/: chat.rs  preferences.rs
crates/openai-cli/src/feature/: edit.rs  settings.rs
crates/pplx-news/: Cargo.toml
crates/pplx-news/src/: main.rs
crates/pwnedpassword/: Cargo.toml
crates/rarr/: Cargo.toml
crates/rust-myscript/: Cargo.toml  build.rs
crates/rust-myscript/src/: lib.rs  prelude.rs
crates/rust-myscript/src/feature/: otel.rs
crates/siteupdatechecker/: Cargo.toml
crates/siteupdatechecker/src/: main.rs
crates/temperature-sensor/: Cargo.toml
crates/temperature-sensor/src/: main.rs
crates/trimhistory/: Cargo.toml
crates/trimhistory/src/: main.rs
crates/unzip-bt/: Cargo.toml
crates/update-letsencrypt-cloudflare/: Cargo.toml
crates/update-letsencrypt-cloudflare/src/: main.rs
crates/webfile/: Cargo.toml
crates/webfile/src/: main.rs
crates/wimaxtraffic/: Cargo.toml
crates/yubiotp-checker/: Cargo.toml
src/: feature.rs  lib.rs  model.rs  prelude.rs
src/feature/: otel.rs
src/model/: sqlite_user_version.rs
src/myscript/: mod.rs  prelude.rs
