[workspace]
resolver = "3"
members = [
    "crates/*",
]
exclude = [
    "crates/async-vs",
    "crates/checkghossversion",
    "crates/digest-auth",
    "crates/iijmio-cli",
    "crates/mz-conv",
    "crates/netgear-finder",
    "crates/openai-cli",
    "crates/update-letsencrypt-cloudflare",
    "crates/wimaxtraffic"
]

[workspace.package]
version = "0.1.0"
description = "Super good command-line tools for myself"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
homepage = "https://github.com/sukawasatoru/rust-myscript"
repository = "https://github.com/sukawasatoru/rust-myscript.git"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
rust-myscript = { path = "crates/rust-myscript", default-features = false }
anyhow = "=1.0.100"
async-stream = "=0.3.6"
axum = { version = "=0.8.8", features = ["macros"] }
base64 = "=0.22.1"
blake2 = "=0.10.6"
bytes = "=1.11.0"
chrono = { version = "=0.4.42", features = ["serde"] }
clap = { version = "=4.5.53", features = ["derive", "env"] }
clap_complete = "=4.5.64"
digest = "=0.10.7"
directories = "=6.0.0"
dotenv = "=0.15.0"
futures = "=0.3.31"
hostname = "=0.4.2"
hmac = "=0.12.1"
indicatif = "=0.18.3"
infer = "=0.19.0"
libc = "=0.2.178"
md-5 = "=0.10.6"
mdns-sd = "=0.17.1"
mime = "=0.3.17"
num_cpus = "=1.17.0"
opener = "=0.8.3"
opentelemetry = { version = "=0.24.0", default-features = false }
opentelemetry_sdk = { version = "=0.24.1", default-features = false, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "=0.17.0", default-features = false, features = ["http-proto", "logs", "reqwest-client"] }
opentelemetry-appender-tracing = { version = "=0.5.0", default-features = false }
opentelemetry-semantic-conventions = "=0.16.0"
pkg-config = "=0.3.31"
rand = "=0.9.2"
ratatui = "=0.30.0"
regex = "=1.12.2"
reqwest = { version = "=0.12.28", features = ["blocking", "json", "brotli", "gzip", "deflate"] }
rusqlite = { version = "=0.38.0", features = ["bundled-windows"] }
semver = { version = "=1.0.27", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_json = "=1.0.148"
sha-1 = "=0.10.1"
sha2 = "=0.10.9"
sha3 = "=0.10.8"
serde_urlencoded = "=0.7.1"
strum = { version = "=0.27.2", features = ["derive"] }
tinytable-rs = { git = "https://github.com/sukawasatoru/tinytable-rs.git", tag = "v0.3.2" }
tokio = { version = "=1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
toml = "=0.9.8"
tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
tree_magic_mini = "=3.2.2"
trust-dns-resolver = "=0.23.2"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "=1.19.0", features = ["v4"] }
warp = { version = "=0.3.7", features = ["tls"] }
zip = "=7.0.0"
mockall = "=0.13.1"
