[workspace]
resolver = "3"
members = [
    "crates/*",
]
exclude = [
    "crates/async-vs",
    "crates/checkghossversion",
    "crates/digest-auth",
    "crates/iijmio-cli",
    "crates/lfs-agent-local",
    "crates/mz-conv",
    "crates/netgear-finder",
    "crates/openai-cli",
    "crates/update-letsencrypt-cloudflare",
    "crates/wimaxtraffic"
]

[workspace.package]
version = "0.1.0"
description = "Super good command-line tools for myself"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
homepage = "https://github.com/sukawasatoru/rust-myscript"
repository = "https://github.com/sukawasatoru/rust-myscript.git"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
rust-myscript = { path = "crates/rust-myscript", default-features = false }
anyhow = "=1.0.101"
async-stream = "=0.3.6"
axum = { version = "=0.8.8", features = ["macros"] }
base64 = "=0.22.1"
blake2 = "=0.10.6"
blake3 = "1.8.3"
bytes = "=1.11.1"
chrono = { version = "=0.4.43", features = ["serde"] }
clap = { version = "=4.5.57", features = ["derive", "env"] }
clap_complete = "=4.5.65"
digest = "=0.10.7"
directories = "=6.0.0"
dotenv = "=0.15.0"
futures = "=0.3.31"
hostname = "=0.4.2"
hmac = "=0.12.1"
indicatif = "=0.18.3"
infer = "=0.19.0"
libc = "=0.2.182"
md-5 = "=0.10.6"
mdns-sd = "=0.17.2"
mime = "=0.3.17"
num_cpus = "=1.17.0"
opener = "=0.8.4"
opentelemetry = { version = "=0.31.0", default-features = false }
opentelemetry_sdk = { version = "=0.31.0", default-features = false, features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "=0.31.0", default-features = false, features = ["http-proto", "logs", "reqwest-client"] }
opentelemetry-appender-tracing = { version = "=0.31.1", default-features = false }
opentelemetry-semantic-conventions = { version = "=0.31.0", features = ["semconv_experimental"] }
pkg-config = "=0.3.32"
rand = "=0.9.2"
ratatui = "=0.30.0"
regex = "=1.12.3"
reqwest = { version = "=0.13.1", features = ["blocking", "json", "form", "brotli", "gzip", "deflate"] }
rusqlite = { version = "=0.38.0", features = ["bundled-windows"] }
semver = { version = "=1.0.27", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_json = "=1.0.149"
sha-1 = "=0.10.1"
sha2 = "=0.10.9"
sha3 = "=0.10.8"
serde_urlencoded = "=0.7.1"
strum = { version = "=0.27.2", features = ["derive"] }
tempfile = "=3.26.0"
tinytable-rs = { git = "https://github.com/sukawasatoru/tinytable-rs.git", tag = "v0.3.2" }
tokio = { version = "=1.49.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
toml = "=0.9.11"
tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
tree_magic_mini = "=3.2.2"
trust-dns-resolver = "=0.23.2"
url = { version = "=2.5.8", features = ["serde"] }
uuid = { version = "=1.20.0", features = ["v4"] }
walkdir = "2.5.0"
axum-server = { version = "=0.8.0", features = ["tls-rustls"] }
tower-http = { version = "=0.6.8", features = ["fs"] }
zip = "8.1.0"
mockall = "=0.14.0"
