[package]
name = "checkghossversion"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[build-dependencies]
anyhow = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
dotenv = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust-myscript = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
