[package]
name = "crystal-disk-info-otel"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
opener = { workspace = true }
rust-myscript = { workspace = true, features = ["otel"] }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-registry = { workspace = true }
windows-result = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
