[package]
name = "filededuplication"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
blake2 = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
rust-myscript = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
