[package]
name = "lfs-agent-local"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
rust-myscript = { workspace = true, features = ["otel"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
