[package]
name = "mcp-memo"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
rust-myscript = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
rmcp = { workspace = true, features = ["schemars", "transport-io", "server", "client"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
