[package]
name = "mysqliteversion"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
rusqlite = { workspace = true }
rust-myscript = { workspace = true, features = ["sqlite"] }
