[package]
name = "mytimeout"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rust-myscript = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
