[package]
name = "mz-conv"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
rust-myscript = { workspace = true }
tracing-subscriber = { workspace = true }
