[package]
name = "pwnedpassword"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
digest = { workspace = true }
directories = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
rust-myscript = { workspace = true }
sha-1 = { workspace = true }
tinytable-rs = { workspace = true }
tracing-subscriber = { workspace = true }
