[package]
name = "rarr"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
rust-myscript = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
