[package]
name = "unzip-bt"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
indicatif = { workspace = true }
num_cpus = { workspace = true }
rust-myscript = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
zip = { workspace = true }
