[package]
name = "update-letsencrypt-cloudflare"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
reqwest = { workspace = true }
rust-myscript = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
trust-dns-resolver = { workspace = true }
